--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,5 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+# Simple workflow for deploying images content to GitHub Pages
+name: Deploy images content to Pages
 
 on:
   # Runs on pushes targeting the default branch
